# VCRegistry

./: CONTRIBUTING.md  Cargo.toml  LICENSE.txt  Makefile  README.md  SECURITY.md  package.json
contract/demovcregistry/: Cargo.toml
contract/demovcregistry/src/: main.rs
contract/did/: Cargo.toml
contract/did/src/: main.rs
js/: constants.js  exportKeyPair.js
js/demovcregistry/: deploy_demovcregistry.js  read_demoVCRegistry.js  transact_changeVPRequestStatus.js  transact_sendVPRequest.js
network_keys/example_user1/: wokpqkdwqo_secret_key.cer
network_keys/example_user2/: 3po2eiui931ue901_secret_key.cer
scripts/demovcregistry/: transact_changeVCRevocationFlag.js  transact_issueDemoVC.js  transact_registerVPResponse.js
scripts/did/: deploy_did.js
scripts/vcregistry/: transact_issueVC.js
tests/demovcregistry/: Cargo.toml
tests/demovcregistry/src/: demovcregistryTestFixture.rs  demovcregistry_tests.rs
tests/demovcregistry/wasm/: demovcregistry.wasm
tests/did/: Cargo.toml
tests/did/src/: didTestFixture.rs  did_tests.rs
tests/did/wasm/: did.wasm
