[package]
name = "demovcregistry_tests"
version = "0.1.0"
authors = ["Vakhtanh Chikhladze <vchikhladze@vareger.com>"]
edition = "2018"

[dev-dependencies]
casper-engine-test-support = { version = "1.3.2" }
casper-types = { version = "1.1.1" }
hex = "0.4.3"

[[bin]]
name = "demovcregistry_tests"
path = "demovcregistry/src/demovcregistry_tests.rs"
bench = false
doctest = false
